@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.1 2018/03/15 18:37:18 minskim Exp $
+$NetBSD: distinfo,v 1.2 2019/08/01 00:57:56 brook Exp $
 
-SHA1 (R/utf8_1.1.3.tar.gz) = edb3ab0800838c2d5312cbf8443d2de4cc718da4
-RMD160 (R/utf8_1.1.3.tar.gz) = b250fd9cfa9c75db177d4d647c578cea2e466830
-SHA512 (R/utf8_1.1.3.tar.gz) = 4460ed3bb1a06912ffc0493ae1242c2bf5ede5c2dbd669138379b3db34462651066ce3e2df2240b4bdfc563604226738ae9172e46a6c834dfeb079f560e3dc75
-Size (R/utf8_1.1.3.tar.gz) = 217735 bytes
+SHA1 (R/utf8_1.1.4.tar.gz) = b8864e2478bf30a279d85307544f2d65ad4a580f
+RMD160 (R/utf8_1.1.4.tar.gz) = 01170fecc8e7710e4520f0847e07c82e5b5b59e1
+SHA512 (R/utf8_1.1.4.tar.gz) = c45308500417e820285edaba54d5e6f3f2ab599dc388457a85cff0112b454ff09a9e18710762a93fc21239d84440ab844a1a7b134af6111a3cf0e3fa25ed95eb
+Size (R/utf8_1.1.4.tar.gz) = 218882 bytes
